apps/kyverno/clusterPolicies/audit/require-product-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Internal Logic
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Require cost labels. They are used by our cost-analyzer to pull costs
      for every product separately.
spec:
  validationFailureAction: audit
  background: false
  webhookTimeoutSeconds: 20
  rules:
  - name: check-for-labels
    match:
      any:
      - resources:
          kinds:
          - Deployment
          - StatefulSet
          - DaemonSet
          - Pod
    validate:
      message: >-
        [E004]Labels Product and ProductComponents are required
        (details: url)
      pattern:
        metadata:
          labels:
            Product: "?*"
            ProductComponents: "?*"
